[metadata]
name = ratarmount
version = 0.8.1
author = Maximilian Knespel
author_email = mxmlnkn@github.de
license = MIT
description = Random Access Read-Only Tar Mount
url = https://github.com/mxmlnkn/ratarmount
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: System :: Archiving

[options]
py_modules = ratarmount
install_requires =
    dataclasses; python_version < "3.7.0"

[options.entry_points]
console_scripts = ratarmount=ratarmount:cli

[options.extras_require]
full =
    fusepy
    indexed_gzip>=1.5.3
    indexed_bzip2>=1.1.2
    indexed_zstd>=1.2.2
    cffi
    lzmaffi
xz =
    cffi
    lzmaffi
